Correction des articles content layer

--- a/articles/41-de-fièvre-mais-toutes-vos-dents.mdx
+++ b/articles/41-de-fièvre-mais-toutes-vos-dents.mdx
@@ -1,7 +1,9 @@
 ---
 titre: 41° de fièvre, mais toutes vos dents !
 date: 2020-04-04
-image: https://images.unsplash.com/photo-1586194483662-d84a7a2deba1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80
+image:
+  adresse: https://images.unsplash.com/photo-1586194483662-d84a7a2deba1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80
+  description: Un thermomètre mural sur un mur en bois
 résumé: Votre médecin ne prononcera jamais cette phrase. Adoptons la même rigueur pour diagnostiquer l'état de notre planète bleue.
 ---
 
