--- a/articles/le-tgv-airfrance-est-attendu-au-depart.mdx
+++ b/articles/le-tgv-airfrance-est-attendu-au-depart.mdx
@@ -3,11 +3,12 @@ titre: Voie B, le TGV Air France est attendu au départ
 résumé: |
   La compagnie aérienne fera-t-elle le choix visionnaire de devenir un acteur du seul transport rapide du futur : le train ?
 date: 2019-10-20
-image: https://cdn-images-1.medium.com/max/800/1*lgbRWT3Chvu4V_ybv307Yw.jpeg
+image:
+  adresse: https://cdn-images-1.medium.com/max/800/1*lgbRWT3Chvu4V_ybv307Yw.jpeg
+  description: Au soleil couchant, un train au premier plan et un avion dans le ciel au second plan.
 ---
 
 # Voie B, le TGV Air France est attendu au départ
-
 
 Les faits sont incontestables : notre climat se détraque et les yeux se braquent de plus en plus vers les traînées blanches dans le ciel.
 
@@ -22,7 +23,7 @@ Peut-être, mais si l’aviation reste sous les 10% des gaz à effet de serre, c
 Aller flâner dans le _Central Park_ entre une visite du _MoMA_ et une soirée _rooftop_, **c’est consommer d’un coup le crédit carbone annuel** qui nous permettrait de rester en-dessous d’un réchauffement de 1.5°C.
 
 ![](https://cdn-images-1.medium.com/max/800/1*gERdyuRRghS_LGBsakP_gw.jpeg)
-*[Simuler l'impact sur le climat d'un vol d'avion](https://futur.eco/simulateur/transport/avion/impact)*
+_[Simuler l'impact sur le climat d'un vol d'avion](https://futur.eco/simulateur/transport/avion/impact)_
 
 ### Du fait scientifique au choc économique
 
@@ -58,12 +59,12 @@ Vous savez pertinement que le 10ème aéroport mondial, Paris-Charles-de-Gaulle,
 
 Vous savez mieux que tout le monde la démesure des infrastructures aéroportuaires : CDG fait 32km2, trois fois plus que l’emprise au sol de la LGV Paris-Lyon.
 
-<blockquote class="twitter-tweet"><p lang="fr" dir="ltr">Les aéroports de Paris :<br>— CDG : 32 km² (69 Mpax/an)<br>— ORY : 15 km² (31 Mpax/an)<br>— LBG : 5,5 km²<br>— BVA : 2,4 km² (3,8 Mpax/an)<br>— Total : 55 km²<br>— Paris : 85 km² à l’intérieur du périf (105 avec périph et bois)<br><br>Sources : Wikipedia, geportail, OpenStreetMap. <a href="https://t.co/3VRtpSYviP"><img src="https://pbs.twimg.com/media/EHfn3VMW4AA7yMR.jpg"/></a></p>&mdash; Tristram Gräbener 🚲 (@tristramg) <a href="https://twitter.com/tristramg/status/1186676558259539969?ref_src=twsrc%5Etfw">October 22, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+CDG : 32 km² (69 Mpax/an). ORY : 15 km² (31 Mpax/an). LBG : 5,5 km². BVA : 2,4 km² (3,8 Mpax/an). **Total** : 55 km². Dimensions de Paris : 85 km² à l’intérieur du périf (105 avec périph et bois).
 
 En octobre 2019, la SNCF vous attaque avec de nouvelles campagnes de pub.
 
 ![Eurostar est détenu à 55% par la SNCF](https://cdn-images-1.medium.com/max/800/1*XZ_KCJA0mTVKIrZ4rbCrFw.jpeg)
-*Eurostar est détenu à 55% par la SNCF*
+_Eurostar est détenu à 55% par la SNCF_
 
 Pire : cette dernière lance son projet [GreenSpeed](https://www.lesechos.fr/industrie-services/tourisme-transport/la-sncf-souhaite-fusionner-eurostar-et-thalys-1135327) qui fusionnera Thalys et Eurostar pour concurrencer l’avion au niveau européen.
 
