Les pages article commencent à marcher

--- a/articles/versez-votre-acompte-écologique.mdx
+++ b/articles/versez-votre-acompte-écologique.mdx
@@ -14,7 +14,7 @@ image:
 
 De : La Présidence de la République française
 
-<div style="text-align: right">À : le peuple français</div>
+<div style={{ textAlign: 'right' }}>À : le peuple français</div>
 
 Objet : Avis de refus de votre demande de transition écologique
 
