--- a/articles/le-cout-des-choses.mdx
+++ b/articles/le-cout-des-choses.mdx
@@ -4,7 +4,7 @@ modified: 2022-06-01T14:16:15+02:00
 titre: Le coût des choses
 résumé: L'argent et la morale, bordel c'était si simple !
 image:
-  adresse: /images/pièce cassée transparente.png
+  adresse: /pièce cassée transparente.png
   description: Une pièce de monnaie brisée. Les inscriptions "In god we trust" et "Liberty", brisées elles aussi.
 date: 2022-06-01
 dégradé:
